@@ -66,7 +66,7 @@ DataNormalization <- function(MetFlowData,
     path <- getwd()
   }
   # browser()
-  path1 <- file.path(path, "7Normalization result")
+  path1 <- file.path(path, "7 Normalization result")
   dir.create(path1)
 
   qc <- MetFlowData[["qc"]]
